--- a/index.html
+++ b/index.html
@@ -3,31 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburgeres</title>
+    <title>Document</title>
 </head>
 <body>
-    <ul>
-        <li><a href="/">home</a></li>
-        <li><a href="/">product</a></li>
-        <li><a href="/">orders</a></li>
-        <li><a href="/about.html">about</a></li>
-    </ul>
-    <h1>Burger king</h1>
-    <p>
-        ez egy bekezdés
-    </p>
   <ul>
-      <li>sima</li>
+    <li><a href="/">home</a></li>
+    <li><a href="/products.html">products</a></li>
+    <li><a href="/orders.html">orders</a></li>
+    <li><a href="/about.html">about</a></li>
+  </ul>
+    <h1>Hamburgerező</h1>
+  <ul>
+      <li>husos</li>
+      <ul>
+        <li>marha</li>
+        <li>diszno</li>
+        <li>csirke</li>
+      </ul>
       <li>sajtos</li>
       <li>vega</li>
   </ul>
   <ol>
-      <li>sajt</li>
-      <li>huspogi</li>
-      <li>hagyma</li>
+    <li>paprika</li>
+      <li>chili</li>
+      <li>hagyma</li>  
   </ol>
-  <a target="blank" href="https://pizzadicasa.hu/shop/mosonmagyarovar/hamburgerek/1073-hawaii-hamburger.html">
-    <img width="56" src="img/hawaii-hamburger.jpg" alt="kep"></a>
-  
+
+  <a href="http://www.mindmegette.hu/vega-hamburger.recept/">recept hamburger</a>
+    <p>Ez egy <em>nagyon</em> <strong>nagyon</strong> fontos bekezdes</p>
+  <a href="orders.html">orders</a>
+  <a target="blank" href="http://www.mindmegette.hu/vega-hamburger.recept/">
+      <img width="100" src="https://lh3.googleusercontent.com/proxy/kxBwIHjFKvy6t1wDVU1Ukw7yxmF-Od4DoKPVD6ci2IytcPwUXAAeU-WRCfzEk9ypQ2fLUfiQKwnqCt0hK98-0F03Vl1moM7s_zsB-9rFee_Oz6PmrBv4z1Q" alt="tavoli kép">
+
+  </a>
+    <img src="img/hawaii-hamburger.jpg" alt="masik kép">
 </body>
 </html>
